# flashburst

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TESTING.md  pyproject.toml  skills-lock.json
.agents/skills/flashburst/: SKILL.md
.agents/skills/flashburst/agents/: openai.yaml
.github/workflows/: ci.yml
docs/: CLI_REFERENCE.md  TESTING.md
examples/runpod_flash_embedding_endpoint/: README.md  endpoint.py
examples/transcription_demo/: README.md  manifest.jsonl  transcriber.py
src/flashburst/: __init__.py  agent_context.py  cli.py  config.py  db.py  endpoint_scaffold.py  ids.py  models.py  scheduler.py  time.py  worker.py  workload.py  workload_scaffold.py
src/flashburst/adapters/: dbos_queue.py  mock_cloud.py  r2_artifacts.py  runpod_flash.py
src/flashburst/artifacts/: __init__.py  local.py  s3.py
src/flashburst/capabilities/: __init__.py  bge_embeddings.py  fake_embeddings.py  loader.py  registry.py
src/flashburst/examples/: prepare_embeddings.py
src/flashburst/workloads/: __init__.py  fake_embeddings.py
tests/: conftest.py  test_alpha_cli.py  test_bge_embeddings.py  test_capability_loader.py  test_config_cli.py  test_db.py  test_endpoint_scaffold.py  test_examples.py  test_fake_embeddings.py  test_mock_cloud.py  test_models.py  test_r2_artifacts.py  test_runpod_flash.py  test_runpod_flash_adapter.py  test_runpod_flash_endpoint_example.py  test_runpod_flash_plan_runner.py  test_s3_artifacts.py  test_scheduler.py  test_worker.py  test_workload_run.py  test_workload_scaffold.py
