[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "flashburst"
version = "0.1.0"
description = "Independent local-first GPU job distribution with explicit Runpod Flash burst capacity."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Jason Wang" },
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
runpod = ["runpod-flash>=1.16"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
flashburst = "flashburst.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/flashburst"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/TESTING.md",
  "/pyproject.toml",
  "/.env.example",
]
exclude = [
  "/.agents",
  "/.github",
  "/.flashburst",
  "/.flash",
  "/dist",
  "/build",
  "/tests",
  "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-q"]

[tool.ruff]
target-version = "py312"
line-length = 100
